--- a/lligam.grrrau.co/ws/package.json
+++ b/lligam.grrrau.co/ws/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "lligam.grrrau.co",
+  "name": "wsLligam",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "socks.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
