--- a/lligam.grrrau.co/package.json
+++ b/lligam.grrrau.co/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "lligam.grrrau.co",
+  "name": "wsLligam",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "socks.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.2.1",
     "express": "^4.16.3",
     "ws": "^5.1.0"
   }
